Additional access to util required for base